--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,6 +1,6 @@
 .navbar.navbar-default.navbar-static-top.navbar-fixed-top
   .container
-    %button.navbar-toggle(type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse")
+    %button.navbar-toggle(type='button' data-toggle='collapse' data-target='.navbar-responsive-collapse')
       %span.icon-bar
       %span.icon-bar
       %span.icon-bar
