--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,12 +1,12 @@
 !!!
 %html
   %head
-    %meta{content: "text/html; charset=US-ASCII", http: { equiv: "Content-Type"} }/
+    %meta{content: 'text/html; charset=US-ASCII', http: { equiv: 'Content-Type'} }/
     %title Protospace
     = stylesheet_link_tag    'application', media: 'all', date: { turbolinks: { track: true } }
     = javascript_include_tag 'application', date: { turbolinks: { track: true } }
     = csrf_meta_tags
   %body
-    = render "layouts/header"
+    = render 'layouts/header'
     = yield
-    = render "layouts/footer"
+    = render 'layouts/footer'
