modify fucking css

--- a/app/assets/stylesheets/protospace.css.scss
+++ b/app/assets/stylesheets/protospace.css.scss
@@ -549,7 +549,7 @@ body {
 }
 
 .form-signin {
-  max-width: 330px;
+  max-width: 130px;
   padding: 15px;
   margin: 0 auto;
 
@@ -632,4 +632,44 @@ body {
 .user-new{
   margin: 0 auto;
   width: 360px;
+}
+
+li{
+  list-style: none;
+}
+.nav.navbar-nav.navbar-right{
+  float: right !important;
+}
+
+.btn.btn-primary.navbar-btn{
+  border: 1px solid #eee;
+  min-width: 88px;
+  padding: 10px 14px;
+}
+
+.container{
+  width: 1170px;
+  margin: 0 auto;
+}
+
+body{
+  padding-top: 0px;
+}
+
+.navbar-toggle{
+  float: right;
+}
+
+.navbar-brand{
+  float: left;
+}
+
+.clearfix:after{
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.dropdown{
+  float: left;
 }
