--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -7,12 +7,12 @@
           %h2 Register
           .user-name_image.row
             .user-name.col-md-10
-              = f.text_field :username, placeholder: 'Username', autofocus: true
+              = f.text_field :name, placeholder: 'Username'
             .user-image.col-md-2
               %button.btn.btn-primary Add image
               = f.file_field :avatar
           .user-email
-            = f.email_field :email, placeholder: 'E-mail'
+            = f.email_field :email, placeholder: 'E-mail', autofocus: true
           .user-password
             = f.password_field :password, placeholder: 'Password', autocomplete: "off"
           .user-password
