--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -15,11 +15,11 @@
       %ul.nav.navbar-nav.navbar-right
         %li.dropdown
           %a.dropdown-toggle{ aria: { expanded: "false" }, data: { toggle: "dropdown" }, role: "button"}
-            #{ current_user.name }
+            = current_user.name
             %span.caret
           %ul.dropdown-menu{role: "menu"}
             %li
-              = link_to "Profile edit"
+              = link_to "Profile edit", edit_user_path(current_user)
             %li
               = link_to 'logout', destroy_user_session_path, method: :delete
         %li.btn.btn-primary.navbar-btn
