--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -7,7 +7,7 @@
       %span.icon-bar
       %span.icon-bar
       %span.icon-bar
-    - if current_user
+    - if user_signed_in?
       %ul.nav.navbar-nav.navbar-right
         %li.dropdown
           %a.dropdown-toggle{ aria: { expanded: 'false' }, data: { toggle: 'dropdown' }, role: 'button'}
@@ -20,7 +20,7 @@
               = link_to 'logout', destroy_user_session_path, method: :delete
         %li.btn.btn-primary.navbar-btn
           = link_to 'New Proto'
-    - else current_user
+    - else
       %ul.nav.navbar-nav.navbar-right
         %li.btn.btn-primary.navbar-btn
           = link_to 'Get Started'
