add html of flash_message

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,5 +8,9 @@
     = csrf_meta_tags
   %body
     = render 'layouts/header'
+    - if notice
+      %p.alert.alert-notice= notice
+    - if alert
+      %p.alert.alert-error= alert
     = yield
     = render 'layouts/footer'
