edit new_action views

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -19,7 +19,7 @@
             %li
               = link_to 'logout', destroy_user_session_path, method: :delete
         %li.btn.btn-primary.navbar-btn
-          = link_to 'New Proto'
+          = link_to 'New Proto', new_proto_path
     - else
       %ul.nav.navbar-nav.navbar-right
         %li.btn.btn-primary.navbar-btn
