--- a/app/views/protos/new.html.haml
+++ b/app/views/protos/new.html.haml
@@ -1,36 +1,26 @@
-%form.container.proto-new{action: ""}
-  .col-md-8.col-md-offset-2
+.container.proto-new
+  = form_for @proto do |f|
     %header.row.user-nav.row
       .col-md-12
-        %input.proto-new-title{type: "text", placeholder: "Title"}/
+        = f.text_field :title, placeholder: "Title", class: "proto-new-title"
     .row
       .col-md-12
         .cover-image-upload
-          %input{type: "file"}/
+          = f.fields_for :images, @images.first do |m|
+            = m.file_field :image
+            = m.hidden_field :role, value: 'main'
+            = m.hidden_field :id, value: m.object.id
       .col-md-12
         %ul.proto-sub-list.list-group
-          %li.list-group-item.col-md-4
-            .image-upload
-              %input{type: "file"}/
-          %li.list-group-item.col-md-4
-            .image-upload
-              %input{type: "file"}/
-          %li.list-group-item.col-md-4
-            .image-upload-plus
-              %span +
+          = f.fields_for :images, @images.drop(1) do |s|
+            %li.list-group-item.col-md-4
+              .image-upload
+                = s.file_field :image
+                = s.hidden_field :id, value: s.object.id
     .row.proto-description
       .col-md-12
-        %input{type: "text", placeholder: "Catch Copy"}/
+        = f.text_field :catchcopy, placeholder: "Catch Copy"
       .col-md-12
-        %textarea{name: "", cols: "30", rows: "4", placeholder: "Concept"}
-      .col-md-12
-        %h4 Tag List
-        .row
-          .col-md-3
-            %input{type: "text", placeholder: "Web Design"}/
-          .col-md-3
-            %input{type: "text", placeholder: "UI"}/
-          .col-md-3
-            %input{type: "text", placeholder: "Application"}/
+        = f.text_area :concept, cols: "30", rows: "4", placeholder: "Concept"
     .row.text-center.proto-btn
       %button.btn.btn-lg.btn-primary.btn-block{type: "submit"} Publish
