--- a/app/assets/stylesheets/protospace.css.scss
+++ b/app/assets/stylesheets/protospace.css.scss
@@ -673,3 +673,60 @@ body{
 .dropdown{
   float: left;
 }
+
+// proto in index
+.col-md-3{
+  width: 25%;
+}
+.proto-content {
+  position: relative;
+  float: left;
+  padding: 0 15px;
+  .thumbnail {
+    display: block;
+    border-radius: 0;
+    padding: 0;
+  }
+
+  h3 {
+    margin: 0;
+    font-size: 1.6rem;
+  }
+
+  .proto-meta {
+    overflow: hidden;
+    font-size: 1.2rem;
+    padding: 10px 0;
+
+    .proto-user {
+      float: left;
+    }
+
+    .proto-posted {
+      float: right;
+    }
+  }
+
+  .btn {
+    font-size: 1rem;
+    padding: 5px;
+    min-width: 50px;
+    border: 1px solid #eee;
+  }
+  a{
+    text-decoration: none;
+    color: black;
+  }
+}
+
+.text-center{
+  clear: both;
+}
+.caption{
+  padding: 9px;
+  background-color: #FFFFFF;
+}
+
+.index-main-image{
+  max-width: 100%;
+}
