modify controlller and view

--- a/app/views/protos/new.html.haml
+++ b/app/views/protos/new.html.haml
@@ -6,24 +6,23 @@
     .row
       .col-md-12
         .cover-image-upload
-          = f.fields_for :images, @images.first do |m|
+          = f.fields_for :images, @image do |m|
             = m.file_field :image
             = m.hidden_field :role, value: 'main'
-            = m.hidden_field :id, value: m.object.id
       .col-md-12
         %ul.proto-sub-list.list-group
-          = f.fields_for :images, @images.drop(1) do |s|
+        - 3.times do
+          = f.fields_for :images, @image do |s|
             %li.list-group-item.col-md-4
               .image-upload
                 = s.file_field :image
-                = s.hidden_field :id, value: s.object.id
-          .add_field.image-upload-plus
-            = link_to_add_fields "+", f, :images
+        .add_field.image-upload-plus
+          = link_to_add_fields "+", f, :images
     .row.proto-description
       .col-md-12
         = f.text_field :catchcopy, placeholder: "Catch Copy"
       .col-md-12
         = f.text_area :concept, cols: "30", rows: "4", placeholder: "Concept"
     .row.text-center.proto-btn
-      .btn.btn-lg.btn-primary.btn-block
-        = f.submit "Publish"
+      %button.btn.btn-lg.btn-primary.btn-block
+        = f.submit "Publish", class: 'publish_button'
