--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -23,4 +23,4 @@
     - else
       %ul.nav.navbar-nav.navbar-right
         %li.btn.btn-primary.navbar-btn
-          = link_to 'Get Started', new_user_session_path
+          = link_to 'Get Started', new_user_registration_path
