--- a/app/views/protos/_proto.html.haml
+++ b/app/views/protos/_proto.html.haml
@@ -1,6 +1,6 @@
 .col-sm-4.col-md-3.proto-content
   .thumbnail
-    %image{src: "/uploads/image/image/#{proto.image.id}/#{proto.image[:image]}", class: 'index-main-image'}
+    = image_tag proto.image.image_url, class: 'index-main-image'
     .caption
       %h3
         = link_to "#{proto.title}", proto_path(proto)
