modify three points

--- a/app/views/protos/_proto.html.haml
+++ b/app/views/protos/_proto.html.haml
@@ -3,12 +3,12 @@
     = image_tag proto.image.image_url, class: 'index-main-image'
     .caption
       %h3
-        = link_to "#{proto.title}", proto_path(proto)
+        = link_to proto.title, proto_path(proto)
       .proto-meta
         .proto-user
           = link_to "by #{proto.user.name}", proto_path(proto)
         .proto-posted
-          = proto.display_time
+          = proto.created_at.to_s(:customized)
       %ul.proto-tag-list.list-inline
         %li
           %a{href: "#", class: "btn btn-default"} iPad
