--- a/app/views/protos/_proto.html.haml
+++ b/app/views/protos/_proto.html.haml
@@ -1,6 +1,7 @@
 .col-sm-4.col-md-3.proto-content
   .thumbnail
-    = image_tag proto.image.image_url, class: 'index-main-image'
+    - binding.pry
+    = image_tag proto.main_image.image_url, class: 'index-main-image'
     .caption
       %h3
         = link_to proto.title, proto_path(proto)
