--- a/app/views/protos/new.html.haml
+++ b/app/views/protos/new.html.haml
@@ -2,12 +2,12 @@
   = form_for @proto do |f|
     %header.row.user-nav.row
       .col-md-12
-        = f.text_field :title, placeholder: "Title", class: "proto-new-title"
+        = f.text_field :title, placeholder: "Title", class: "proto-new-title",required: 'required'
     .row
       .col-md-12
         .cover-image-upload
           = f.fields_for :images do |m|
-            = m.file_field :image
+            = m.file_field :image, aria: { required:"true" }
       .col-md-12
         %ul.proto-sub-list.list-group
           = f.fields_for :images, @proto.sub_images do |s|
@@ -18,9 +18,9 @@
             = link_to_add_fields "+", f, :images
     .row.proto-description
       .col-md-12
-        = f.text_field :catchcopy, placeholder: "Catch Copy"
+        = f.text_field :catchcopy, placeholder: "Catch Copy",required: 'required'
       .col-md-12
-        = f.text_area :concept, cols: "30", rows: "4", placeholder: "Concept"
+        = f.text_area :concept, cols: "30", rows: "4", placeholder: "Concept",required: 'required'
     .row.text-center.proto-btn
       %button.btn.btn-lg.btn-primary.btn-block
         = f.submit "Publish", class: 'publish_button'
