--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -24,7 +24,7 @@
               = @user.occupation
 .container.proto-list
   .row
-    = render partial: "protos/proto", collection: @user.protos
+    = render @user.protos
 .text-center
   %ul.pagination
     %li.disabled
