--- a/app/views/protos/_form.html.haml
+++ b/app/views/protos/_form.html.haml
@@ -1,17 +1,17 @@
 .container.proto-new
-  = form_for @proto do |f|
+  = form_for proto do |f|
     %header.row.user-nav.row
       .col-md-12
         = f.text_field :title, placeholder: "Title", class: "proto-new-title",required: 'required'
     .row
       .col-md-12
         .cover-image-upload
-          = f.fields_for :images, @proto.main_picture do |m|
+          = f.fields_for :images, proto.main_picture do |m|
             = m.file_field :image, aria: { required:"true" }
             = m.hidden_field :role
       .col-md-12
         %ul.proto-sub-list.list-group
-          = f.fields_for :images, @proto.sub_images do |s|
+          = f.fields_for :images, proto.sub_images do |s|
             %li.list-group-item.col-md-4
               .image-upload
                 = s.file_field :image
