--- a/app/views/likes/_like.html.haml
+++ b/app/views/likes/_like.html.haml
@@ -1,16 +1,16 @@
 - if user_signed_in?
   - if proto.like_user(current_user)
-    = button_to proto_like_path(proto_id: proto.id, id: like.id), method: :delete, id: 'like-buttons', remote: true do
+    = button_to proto_like_path(proto, like), method: :delete, id: 'like-buttons', remote: true do
       = image_tag('icon_red_heart.svg')
       %span#likes-count
-        = likes
+        = likes_count
   - else
-    = button_to proto_likes_path(proto_id: proto.id), id: 'like-buttons', remote: true do
+    = button_to proto_likes_path(proto), id: 'like-buttons', remote: true do
       = image_tag('icon_heart.svg')
       %span#likes-count
-        = likes
+        = likes_count
 - else
-  = link_to new_user_session_path do
+  = button_to new_user_session_path do
     = image_tag('icon_heart.svg')
   %span
-    = likes
+    = likes_count
