--- a/app/views/likes/destroy.js.haml
+++ b/app/views/likes/destroy.js.haml
@@ -1,1 +1,1 @@
-$("#js-likes").html("#{escape_javascript(render 'like', { proto: @proto, likes: @likes.length })}");
+$("#js-likes").html("#{escape_javascript(render 'like', { proto: @proto, likes_count: @likes.length })}");
