--- a/app/views/likes/_like.html.haml
+++ b/app/views/likes/_like.html.haml
@@ -1,1 +1,4 @@
-= user_login?(user_signed_in?, proto.like_user(current_user), proto, likes_count)
+= like_button(proto) do
+  = like_image(proto)
+  %span#likes-count
+    = likes_count
