--- a/app/views/protos/show.html.haml
+++ b/app/views/protos/show.html.haml
@@ -32,12 +32,11 @@
     .col-md-3
       %h4 Tag List
       %ul.proto-tag-list.list-inline
-        %li
-          %a{href: "#", class: "btn btn-default"} iPad
-        %li
-          %a{href: "#", class: "btn btn-default"} wireframe
+        - @proto.tags.each do |tag|
+          %li
+            = link_to "#{tag.name}", tag_path(tag.id)
   .row.proto-comments
-    %h4.col-md-12   Comments
+    %h4.col-md-12 Comments
     %span.num
       .comments_count#comments_count
         = @proto.comments.count
